// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Modal Renders the Add Movie Modal 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <i18nextprovider
        i18n="[object Object]"
      >
        <div
          class="form-modal"
        >
          <div
            class="form-modal container"
          >
            <button
              class="container__close-btn"
              title="close"
            >
              X
            </button>
            <form>
              <h2>
                ADD MOVIE
              </h2>
              <label
                aria-labelledby="title"
              >
                <span>
                  TITLE
                </span>
                <input
                  class="container__input"
                  name="title"
                  placeholder="Movie Title"
                  title="title"
                  value=""
                />
              </label>
              <label
                aria-labelledby="release date"
              >
                <span>
                  RELEASE DATE
                </span>
                <input
                  class="container__date"
                  name="release_date"
                  placeholder="Movie Release Date"
                  title="release_date"
                  type="date"
                  value=""
                />
              </label>
              <label
                aria-labelledby="url"
              >
                <span>
                  MOVIE URL
                </span>
                <input
                  class="container__input"
                  name="url"
                  placeholder="Movie Website"
                  title="url"
                  value=""
                />
              </label>
              <label
                aria-labelledby="genres"
              >
                <span>
                  GENRE
                </span>
                <textarea
                  class="container dropdown-btn"
                />
                <div
                  class="container dropdown"
                  style="display: none;"
                >
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Action"
                      type="checkbox"
                      value="Action"
                    />
                    <span
                      class="option__text"
                    >
                      Action
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Adventure"
                      type="checkbox"
                      value="Adventure"
                    />
                    <span
                      class="option__text"
                    >
                      Adventure
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Animation"
                      type="checkbox"
                      value="Animation"
                    />
                    <span
                      class="option__text"
                    >
                      Animation
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Comedy"
                      type="checkbox"
                      value="Comedy"
                    />
                    <span
                      class="option__text"
                    >
                      Comedy
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Crime"
                      type="checkbox"
                      value="Crime"
                    />
                    <span
                      class="option__text"
                    >
                      Crime
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Drama"
                      type="checkbox"
                      value="Drama"
                    />
                    <span
                      class="option__text"
                    >
                      Drama
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Fantasy"
                      type="checkbox"
                      value="Fantasy"
                    />
                    <span
                      class="option__text"
                    >
                      Fantasy
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Mystery"
                      type="checkbox"
                      value="Mystery"
                    />
                    <span
                      class="option__text"
                    >
                      Mystery
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Romance"
                      type="checkbox"
                      value="Romance"
                    />
                    <span
                      class="option__text"
                    >
                      Romance
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Science Fiction"
                      type="checkbox"
                      value="Science Fiction"
                    />
                    <span
                      class="option__text"
                    >
                      Science Fiction
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Thriller"
                      type="checkbox"
                      value="Thriller"
                    />
                    <span
                      class="option__text"
                    >
                      Thriller
                    </span>
                  </label>
                </div>
              </label>
              <label
                aria-labelledby="overview"
              >
                <span>
                  OVERVIEW
                </span>
                <input
                  class="container__input"
                  name="overview"
                  placeholder="Movie Overview"
                  title="overview"
                  value=""
                />
              </label>
              <label
                aria-labelledby="runtime"
              >
                <span>
                  RUNTIME
                </span>
                <input
                  class="container__input"
                  min="0"
                  name="runtime"
                  placeholder="Movie Runtime"
                  title="runtime"
                  type="number"
                  value="0"
                />
              </label>
              <div
                class="container buttons"
              >
                <button
                  class="container buttons__reset"
                  title="reset"
                >
                  RESET
                </button>
                <button
                  class="container buttons__submit"
                  title="submit"
                  type="submit"
                >
                  SUBMIT
                </button>
              </div>
            </form>
          </div>
        </div>
      </i18nextprovider>
    </div>
  </body>,
  "container": <div>
    <i18nextprovider
      i18n="[object Object]"
    >
      <div
        class="form-modal"
      >
        <div
          class="form-modal container"
        >
          <button
            class="container__close-btn"
            title="close"
          >
            X
          </button>
          <form>
            <h2>
              ADD MOVIE
            </h2>
            <label
              aria-labelledby="title"
            >
              <span>
                TITLE
              </span>
              <input
                class="container__input"
                name="title"
                placeholder="Movie Title"
                title="title"
                value=""
              />
            </label>
            <label
              aria-labelledby="release date"
            >
              <span>
                RELEASE DATE
              </span>
              <input
                class="container__date"
                name="release_date"
                placeholder="Movie Release Date"
                title="release_date"
                type="date"
                value=""
              />
            </label>
            <label
              aria-labelledby="url"
            >
              <span>
                MOVIE URL
              </span>
              <input
                class="container__input"
                name="url"
                placeholder="Movie Website"
                title="url"
                value=""
              />
            </label>
            <label
              aria-labelledby="genres"
            >
              <span>
                GENRE
              </span>
              <textarea
                class="container dropdown-btn"
              />
              <div
                class="container dropdown"
                style="display: none;"
              >
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Action"
                    type="checkbox"
                    value="Action"
                  />
                  <span
                    class="option__text"
                  >
                    Action
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Adventure"
                    type="checkbox"
                    value="Adventure"
                  />
                  <span
                    class="option__text"
                  >
                    Adventure
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Animation"
                    type="checkbox"
                    value="Animation"
                  />
                  <span
                    class="option__text"
                  >
                    Animation
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Comedy"
                    type="checkbox"
                    value="Comedy"
                  />
                  <span
                    class="option__text"
                  >
                    Comedy
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Crime"
                    type="checkbox"
                    value="Crime"
                  />
                  <span
                    class="option__text"
                  >
                    Crime
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Drama"
                    type="checkbox"
                    value="Drama"
                  />
                  <span
                    class="option__text"
                  >
                    Drama
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Fantasy"
                    type="checkbox"
                    value="Fantasy"
                  />
                  <span
                    class="option__text"
                  >
                    Fantasy
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Mystery"
                    type="checkbox"
                    value="Mystery"
                  />
                  <span
                    class="option__text"
                  >
                    Mystery
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Romance"
                    type="checkbox"
                    value="Romance"
                  />
                  <span
                    class="option__text"
                  >
                    Romance
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Science Fiction"
                    type="checkbox"
                    value="Science Fiction"
                  />
                  <span
                    class="option__text"
                  >
                    Science Fiction
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Thriller"
                    type="checkbox"
                    value="Thriller"
                  />
                  <span
                    class="option__text"
                  >
                    Thriller
                  </span>
                </label>
              </div>
            </label>
            <label
              aria-labelledby="overview"
            >
              <span>
                OVERVIEW
              </span>
              <input
                class="container__input"
                name="overview"
                placeholder="Movie Overview"
                title="overview"
                value=""
              />
            </label>
            <label
              aria-labelledby="runtime"
            >
              <span>
                RUNTIME
              </span>
              <input
                class="container__input"
                min="0"
                name="runtime"
                placeholder="Movie Runtime"
                title="runtime"
                type="number"
                value="0"
              />
            </label>
            <div
              class="container buttons"
            >
              <button
                class="container buttons__reset"
                title="reset"
              >
                RESET
              </button>
              <button
                class="container buttons__submit"
                title="submit"
                type="submit"
              >
                SUBMIT
              </button>
            </div>
          </form>
        </div>
      </div>
    </i18nextprovider>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Root Modal Renders the Delete Movie Modal 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <i18nextprovider
        i18n="[object Object]"
      >
        <div
          class="message-modal"
        >
          <div
            class="message-modal container"
          >
            <button
              class="container__close-btn"
            >
              X
            </button>
            <form>
              <h2>
                DELETE MOVIE
              </h2>
              <p>
                Are you sure you want to delete this movie?
              </p>
              <div
                class="container buttons"
              >
                <button
                  class="container buttons__confirm"
                  type="submit"
                >
                  CONFIRM
                </button>
              </div>
            </form>
          </div>
        </div>
      </i18nextprovider>
    </div>
  </body>,
  "container": <div>
    <i18nextprovider
      i18n="[object Object]"
    >
      <div
        class="message-modal"
      >
        <div
          class="message-modal container"
        >
          <button
            class="container__close-btn"
          >
            X
          </button>
          <form>
            <h2>
              DELETE MOVIE
            </h2>
            <p>
              Are you sure you want to delete this movie?
            </p>
            <div
              class="container buttons"
            >
              <button
                class="container buttons__confirm"
                type="submit"
              >
                CONFIRM
              </button>
            </div>
          </form>
        </div>
      </div>
    </i18nextprovider>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Root Modal Renders the Edit Movie Modal 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <i18nextprovider
        i18n="[object Object]"
      >
        <div
          class="form-modal"
        >
          <div
            class="form-modal container"
          >
            <button
              class="container__close-btn"
              title="close"
            >
              X
            </button>
            <form>
              <h2>
                EDIT MOVIE
              </h2>
              <label
                aria-labelledby="movieid"
              >
                <span>
                  MOVIE ID
                </span>
                <input
                  class="container__movieid"
                  disabled=""
                  name="movieid"
                  placeholder="Movie ID"
                  value="1"
                />
              </label>
              <label
                aria-labelledby="title"
              >
                <span>
                  TITLE
                </span>
                <input
                  class="container__input"
                  name="title"
                  placeholder="Movie Title"
                  value="Blade Runner"
                />
              </label>
              <label
                aria-labelledby="release_date"
              >
                <span>
                  RELEASE DATE
                </span>
                <input
                  class="container__date"
                  name="release_date"
                  placeholder="Movie Release Date"
                  type="date"
                  value="1982-01-01"
                />
              </label>
              <label
                aria-labelledby="url"
              >
                <span>
                  MOVIE URL
                </span>
                <input
                  class="container__input"
                  name="url"
                  placeholder="Movie Website"
                  value=""
                />
              </label>
              <label
                aria-labelledby="genre"
              >
                <span>
                  GENRE
                </span>
                <textarea
                  class="container dropdown-btn"
                >
                  Sci-Fi
                </textarea>
                <div
                  class="container dropdown"
                  style="display: none;"
                >
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Action"
                      type="checkbox"
                      value="Action"
                    />
                    <span
                      class="option__text"
                    >
                      Action
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Adventure"
                      type="checkbox"
                      value="Adventure"
                    />
                    <span
                      class="option__text"
                    >
                      Adventure
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Animation"
                      type="checkbox"
                      value="Animation"
                    />
                    <span
                      class="option__text"
                    >
                      Animation
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Comedy"
                      type="checkbox"
                      value="Comedy"
                    />
                    <span
                      class="option__text"
                    >
                      Comedy
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Crime"
                      type="checkbox"
                      value="Crime"
                    />
                    <span
                      class="option__text"
                    >
                      Crime
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Drama"
                      type="checkbox"
                      value="Drama"
                    />
                    <span
                      class="option__text"
                    >
                      Drama
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Fantasy"
                      type="checkbox"
                      value="Fantasy"
                    />
                    <span
                      class="option__text"
                    >
                      Fantasy
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Mystery"
                      type="checkbox"
                      value="Mystery"
                    />
                    <span
                      class="option__text"
                    >
                      Mystery
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Romance"
                      type="checkbox"
                      value="Romance"
                    />
                    <span
                      class="option__text"
                    >
                      Romance
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Science Fiction"
                      type="checkbox"
                      value="Science Fiction"
                    />
                    <span
                      class="option__text"
                    >
                      Science Fiction
                    </span>
                  </label>
                  <label
                    class="dropdown option"
                  >
                    <input
                      class="option__checkbox"
                      name="Thriller"
                      type="checkbox"
                      value="Thriller"
                    />
                    <span
                      class="option__text"
                    >
                      Thriller
                    </span>
                  </label>
                </div>
              </label>
              <label
                aria-labelledby="overview"
              >
                <span>
                  OVERVIEW
                </span>
                <input
                  class="container__input"
                  name="overview"
                  placeholder="Movie Overview"
                  value=""
                />
              </label>
              <label
                aria-labelledby="runtime"
              >
                <span>
                  RUNTIME
                </span>
                <input
                  class="container__input"
                  min="0"
                  name="runtime"
                  placeholder="Movie Runtime"
                  type="number"
                  value="120"
                />
              </label>
              <div
                class="container buttons"
              >
                <button
                  class="container buttons__reset"
                  title="reset"
                >
                  RESET
                </button>
                <button
                  class="container buttons__submit"
                  title="submit"
                  type="submit"
                >
                  SUBMIT
                </button>
              </div>
            </form>
          </div>
        </div>
      </i18nextprovider>
    </div>
  </body>,
  "container": <div>
    <i18nextprovider
      i18n="[object Object]"
    >
      <div
        class="form-modal"
      >
        <div
          class="form-modal container"
        >
          <button
            class="container__close-btn"
            title="close"
          >
            X
          </button>
          <form>
            <h2>
              EDIT MOVIE
            </h2>
            <label
              aria-labelledby="movieid"
            >
              <span>
                MOVIE ID
              </span>
              <input
                class="container__movieid"
                disabled=""
                name="movieid"
                placeholder="Movie ID"
                value="1"
              />
            </label>
            <label
              aria-labelledby="title"
            >
              <span>
                TITLE
              </span>
              <input
                class="container__input"
                name="title"
                placeholder="Movie Title"
                value="Blade Runner"
              />
            </label>
            <label
              aria-labelledby="release_date"
            >
              <span>
                RELEASE DATE
              </span>
              <input
                class="container__date"
                name="release_date"
                placeholder="Movie Release Date"
                type="date"
                value="1982-01-01"
              />
            </label>
            <label
              aria-labelledby="url"
            >
              <span>
                MOVIE URL
              </span>
              <input
                class="container__input"
                name="url"
                placeholder="Movie Website"
                value=""
              />
            </label>
            <label
              aria-labelledby="genre"
            >
              <span>
                GENRE
              </span>
              <textarea
                class="container dropdown-btn"
              >
                Sci-Fi
              </textarea>
              <div
                class="container dropdown"
                style="display: none;"
              >
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Action"
                    type="checkbox"
                    value="Action"
                  />
                  <span
                    class="option__text"
                  >
                    Action
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Adventure"
                    type="checkbox"
                    value="Adventure"
                  />
                  <span
                    class="option__text"
                  >
                    Adventure
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Animation"
                    type="checkbox"
                    value="Animation"
                  />
                  <span
                    class="option__text"
                  >
                    Animation
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Comedy"
                    type="checkbox"
                    value="Comedy"
                  />
                  <span
                    class="option__text"
                  >
                    Comedy
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Crime"
                    type="checkbox"
                    value="Crime"
                  />
                  <span
                    class="option__text"
                  >
                    Crime
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Drama"
                    type="checkbox"
                    value="Drama"
                  />
                  <span
                    class="option__text"
                  >
                    Drama
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Fantasy"
                    type="checkbox"
                    value="Fantasy"
                  />
                  <span
                    class="option__text"
                  >
                    Fantasy
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Mystery"
                    type="checkbox"
                    value="Mystery"
                  />
                  <span
                    class="option__text"
                  >
                    Mystery
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Romance"
                    type="checkbox"
                    value="Romance"
                  />
                  <span
                    class="option__text"
                  >
                    Romance
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Science Fiction"
                    type="checkbox"
                    value="Science Fiction"
                  />
                  <span
                    class="option__text"
                  >
                    Science Fiction
                  </span>
                </label>
                <label
                  class="dropdown option"
                >
                  <input
                    class="option__checkbox"
                    name="Thriller"
                    type="checkbox"
                    value="Thriller"
                  />
                  <span
                    class="option__text"
                  >
                    Thriller
                  </span>
                </label>
              </div>
            </label>
            <label
              aria-labelledby="overview"
            >
              <span>
                OVERVIEW
              </span>
              <input
                class="container__input"
                name="overview"
                placeholder="Movie Overview"
                value=""
              />
            </label>
            <label
              aria-labelledby="runtime"
            >
              <span>
                RUNTIME
              </span>
              <input
                class="container__input"
                min="0"
                name="runtime"
                placeholder="Movie Runtime"
                type="number"
                value="120"
              />
            </label>
            <div
              class="container buttons"
            >
              <button
                class="container buttons__reset"
                title="reset"
              >
                RESET
              </button>
              <button
                class="container buttons__submit"
                title="submit"
                type="submit"
              >
                SUBMIT
              </button>
            </div>
          </form>
        </div>
      </div>
    </i18nextprovider>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
